# Platform

./: README.md  build.py  build_checks.py  codex.patch  new.patch  new.patch.save  pyproject.toml  schema_sqlite.sql  zeutec.db
app/: access_control.py  config.py  db.py  main.py
app/services/: __init__.py  farm_service.py
app/views/: __init__.py  event_map.py  events.py  map_view.py  overview.py
tests/: test_backend_permissions.py
